Update title and description

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index, follow" />
-    <meta name="description" content="Drop In is a free bar rewards program in your pocket. Visit local bars, earn credits and gain access to exclusive rewards and events. Drop In and start earning.">
+    <meta name="description" content="Join the bar rewards program that sends free drinks, food discounts and other perks to your phone just for visiting a partner venue. Free to download and participate.">
     <meta name="keywords" content="bars rewards">
-    <title>Join Drop In</title>
+    <title>Drop In</title>
 
     <!-- CSS -->
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
