--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
           <nav class="_2 nav-menu w-nav-menu" role="navigation"><a class="nav-link w-nav-link" href="#home">Home</a><a class="nav-link w-nav-link" href="#about-us">about</a><a class="nav-link w-nav-link" href="#process">features</a><a class="nav-link w-nav-link" href="#Explore">explore</a><a class="nav-link w-nav-link" href="#Explore">SERVICE</a><a class="nav-link w-nav-link" href="#testtimonials">TESTIMONIALS</a><a class="nav-link w-nav-link" href="#facts">screen</a><a class="nav-link w-nav-link" href="#Contact">CONTACT</a>
           </nav>
         </div>
-        <nav class="_3 nav-menu w-nav-menu" role="navigation"><a class="nav-link w-nav-link" href="https://ad.apps.fm/Sdl4-C31pm34o8GEAEPiL_E7og6fuV2oOMeOQdRqrE1SqZdlPe9ACpS8UfwDn7-uH0Gn4n60BpUqQ-44LeEQRoAKtqkwqbT0UjzyZp_KE0g">get the free app!</a><a class="nav-link w-nav-link" href="#about-us">what is drop in?</a><a class="nav-link w-nav-link" href="#Explore">how it works</a><a class="nav-link w-nav-link" href="mailto:bars@joindropin.com?subject=Inquiry%20to%20become%20a%20partner%20venue">become a partner venue</a>
+        <nav class="_3 nav-menu w-nav-menu" role="navigation"><a class="nav-link w-nav-link" href="http://bit.ly/landingpageappstorelink">get the free app!</a><a class="nav-link w-nav-link" href="#about-us">what is drop in?</a><a class="nav-link w-nav-link" href="#Explore">how it works</a><a class="nav-link w-nav-link" href="http://joindropin.com/partner-inquiries.html">become a partner venue</a>
         </nav>
       </div>
     </div>
     <div class="navbar w-nav" data-animation="default" data-collapse="medium" data-duration="400">
       <div class="w-container">
-        <nav class="_2 nav-menu w-nav-menu" role="navigation"><a class="nav-link w-nav-link" href="https://ad.apps.fm/Sdl4-C31pm34o8GEAEPiL_E7og6fuV2oOMeOQdRqrE1SqZdlPe9ACpS8UfwDn7-uH0Gn4n60BpUqQ-44LeEQRoAKtqkwqbT0UjzyZp_KE0g" target="_blank">get the free app!</a><a class="nav-link w-nav-link" href="#about-us">what is drop in?</a><a class="nav-link w-nav-link" href="#Explore">how it works</a><a class="nav-link w-nav-link" href="mailto:bars@joindropin.com?subject=Inquiry%20to%20become%20a%20partner%20venue">become a partner venue</a>
+        <nav class="_2 nav-menu w-nav-menu" role="navigation"><a class="nav-link w-nav-link" href="http://bit.ly/landingpageappstorelink" target="_blank">get the free app!</a><a class="nav-link w-nav-link" href="#about-us">what is drop in?</a><a class="nav-link w-nav-link" href="#Explore">how it works</a><a class="nav-link w-nav-link" href="http://joindropin.com/partner-inquiries.html">become a partner venue</a>
         </nav>
         <div class="menu-button w-nav-button">
           <div class="icon-menu lines w-icon-nav-menu"></div>
@@ -262,6 +262,9 @@
               <div class="bar-name">The Ale House</div>
               <div class="localtion">Hoboken, NJ - Uptown</div>
             </div>
+          </div>
+          <div style="margin-top: 25px;">
+            <a href="http://joindropin.com/partner-inquiries.html" class="text-link">Interested in becoming a partner venue?</a>
           </div>
           <div class="left-arrow w-slider-arrow-left">
             <div class="w-icon-slider-left"></div>
